fix: enhance file browser overflow-ing layout

--- a/src/renderer/src/assets/base.css
+++ b/src/renderer/src/assets/base.css
@@ -2,6 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .no-scrollbar {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+  }
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+    width: 0;
+    height: 0;
+  }
+}
+
 @layer base {
   * {
     @apply select-none;
